--- a/Akarsh Hemrajani/index.html
+++ b/Akarsh Hemrajani/index.html
@@ -49,14 +49,14 @@
         <center>
           <div class="intro-text">
             <a href="http://www.akarshhemrajani.me">
-            <h1>Hello, I'm <span class="name">Akarsh Hemrajani</span></h1>
+            <h1>Hello, I am <span class="name">Akarsh Hemrajani</span></h1>
             <p>Computer Science Freshman at </a>
               <a href = "http://www.gatech.edu"><i class="fa fa-university"></i><font color="#eeb211"> Georgia Tech</font></a></p>
               <a href="https://drive.google.com/uc?export=download&id=0B86yL4S0gvTNWjJlVHZmd3JHN3c" target="_blank">
                 <i class="fa fa-file-text" style="font-size:60px"></i>
               </a>
               <br><br>
-              <a href="#about" class="btn btn-default btn-lg page-scroll">Know More</a>
+            <a href="#about" class="btn btn-default btn-lg page-scroll">Know More</a>
           </div>
         </center>
       </div>
@@ -98,7 +98,7 @@
           <p class="text-center">I was born in Delhi, India 18 years ago. I am an avid programmer, a tech enthusiast, a budding social entrepreneur, and a die hard <b><a href="http://www.arsenal.com" target="_blank"><font color="#ea2212">Arsenal </font></a></b>fan.
             I enjoy travelling, adventuring, and photography</p>
           <p class="text-center">I <i class="fa fa-heart" style="color:red;"></i> solving problems and building new things.</p>
-          <p class="text-center">Currently, I am pursuing my BS in CS from <b><a href="http://www.gatech.edu" target="_blank"><font color="#eeb211">Georgia Tech. </font></a></b>I hope to graduate with the <b><a href="http://www.cc.gatech.edu/intelligence" target="_blank">Intelligence </a></b>and <b><a href="http://www.cc.gatech.edu/systems-architecture" target="_blank">Systems & Architecture </a></b>threads.</p>
+          <p class="text-center">Currently, I am pursuing my BS in CS and a minor in Industrial Design from <b><a href="http://www.gatech.edu" target="_blank"><font color="#eeb211">Georgia Tech. </font></a></b>I hope to graduate with the <b><a href="http://www.cc.gatech.edu/intelligence" target="_blank">Intelligence </a></b>and <b><a href="http://www.cc.gatech.edu/systems-architecture" target="_blank">Systems & Architecture </a></b>threads.</p>
           <p class="text-center">I want to use the skills and experience I will acquire to help better society, especially in the education and health sector.</p>
           <br><br><br>
         </div>
@@ -123,6 +123,7 @@
     </center>
   </div>
 </div>
+
 <!-- Project Section -->
 <div id="portfolio">
   <div class="container">
@@ -160,25 +161,26 @@
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Creating a socialbot (using the Alexa API) that can converse coherently and engagingly with humans on popular topics and news events." rel="prettyPhoto">
+            <div class="hover-bg"> <a href="https://devpost.com/software/dragonfly-kx1ft5" target="_blank">
               <div class="hover-text">
-                <h4>The Alexa Prize</h4>
-                <small>Participant</small> </div>
-              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="The Alexa Prize"> </a>
+                <h4>DragonFly</h4>
+                <small>CAD, Java</small> </div>
+              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="DragonFly"> </a>
             </div>
             <p><br><br></p>
           </div>
         </div>
-        <!--
         <div class="col-sm-6 col-md-3 col-lg-3 app">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="https://devpost.com/software/trakr" title="A wireless home security device that utilises facial recognition and gives the owner 	   
+            realtime feedback" rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>App Development</small> </div>
-              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>Holmes</h4>
+                <small>Python, Intel-Edsion</small> </div>
+              <img src="img/portfolio/Holmes.jpg" class="img-responsive" alt="Holmes"> </a> </div>
           </div>
         </div>
+        <!--
         <div class="col-sm-6 col-md-3 col-lg-3 branding">
           <div class="portfolio-item">
             <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project description" rel="prettyPhoto">
